<resources>
    <string name="app_name">Flooditarium</string>
    <string name="play">Play</string>
    <string name="difficulty_10_size_20_2_colors_6"><![CDATA[Difficulty (10<=size<=30, 2<=colors<=6)]]></string>
    <string name="colors">Colors</string>
    <string name="go">Go</string>
    <string name="size">Size</string>

    <string name="time_elapsed">Time elapsed:</string>
    <string name="seconds">seconds</string>
    <string name="settings">Settings</string>
    <string name="scoresb">TOP 10 - LOCAL</string>
    <string name="scores">Scores</string>
    <string name="about">About</string>

    <string name="leaveTitle">HOLD YOUR HORSE</string>
    <string name="leaveText">Are you sure you want to leave?</string>
    <string name="okay">Got it</string>
    <string name="yes">Da</string>
    <string name="no">Nyet</string>

    <string name="robidium_hs_2018">Robidium HS, 2018</string>
    <string name="birthday_september_11_2001">Birthday: 11.09.2001</string>
    <string name="id_328472264">ID: 328472264</string>
    <string name="name_gadolinium">Name: Gadolinium</string>
    <string name="dismiss">Dismiss</string>

    <string name="change_name">Change Name</string>
    <string name="audio">Audio</string>
    <string name="back">Back</string>
    <string name="volume">Sound</string>
    <string name="name_nickname">Name/Nickname</string>
    <string name="save">Save</string>
    <string name="tell">Tell me your name:</string>

    <string name="left">Backward</string>
    <string name="right">Forward</string>
    <string name="visual">Visual Instructions</string>

    <string name="inst0">Select the dimensions of your board.\nThe size must be between 10 and 30, and the number of colors between 2 and 6.</string>
    <string name="inst1">The controls at the bottom allow you to "flood" a group of identically colored cells, starting from the cell at the upper right corner.</string>
    <string name="inst2">Your goal is to fill the entire board with one color. You will be scored at the end- the less moves you make, the higher the score will be. There is no time limit, nor is time counted in the calculation of your final score. However, there is a limit for the amount of moves that you can make. The limit is calculated like so: (SIZE*COLORS)/4, as can be seen in the source code.</string>
    <string name="inst3">The default name can be found and changed at the settings screen. However, after each successful game, you will be given the option to use a different name. The default name is there for the sake of ease of use, to avoid forcing players to write their names after each game.</string>
    <string name="inst4">Your score will only be shown if it is amongst the top 10. Clicking a score will take you to the board in which the score was achieved, if you fancy beating a rival in their own board.</string>

    <string name="deleteText">Are you sure you want to reset all scores and preferences? THIS CANNOT BE UNDONE!</string>
    <string name="replayText"></string>
</resources>
