<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="150dp" android:background="#00FFFF">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/difficulty_10_size_20_2_colors_6"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0000FF"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1" android:layout_height="fill_parent" android:layout_width="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/et_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="25"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1" android:layout_height="fill_parent" android:layout_width="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_colors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/colors"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/et_colors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="5"
                tools:ignore="LabelFor" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/go" />

</LinearLayout>